--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header{
     position: fixed;
 }
 #Logo{
-    color: red;
+    color: rgb(255, 0, 217);
     display: flex;
     align-items: center;
 }
